# almar

./: .gitignore  .overcommit.yml  .travis.yml  README.md  lokar.py  pylintrc  pyproject.toml  pytest.ini  setup.cfg  setup.py  test-requirements.txt  tox.ini
almar/: __init__.py  alma.py  almar.py  authorities.py  bib.py  concept.py  job.py  marc.py  sru.py  task.py  util.py  vocabulary.py
lokar/: __init__.py  alma.py  bib.py  concept.py  job.py  lokar.py  marc.py  skosmos.py  sru.py  task.py  util.py
tests/: test_almar.py  test_lokar.py
tests/data/: bib_990100089184702201.xml  bib_990705558424702201.xml  bib_990715687274702201.xml  bib_991416299674702204.xml  bib_linked_cz.xml  bib_response.xml  bib_response2.xml  marc_record_1.xml  sru_error_response.xml  sru_response_dm.xml  sru_sample_response_1.xml  sru_sample_response_2.xml  sru_sample_response_3.xml  sru_toomanyrecords.xml
