[tool.poetry]
name = "almar"
version = "0.1.0"
description = ""
authors = ["Dan Michael O. Heggø <dan.michael.heggo@bibsent.no>"]

[tool.poetry.dependencies]
python = "^3.9"
SPARQLWrapper = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
